--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
-  <title>لعبة من سيربح المليار - الدينار العراقي</title>
+  <title>لعبة من سيربح المليار - التأثيرات الصوتية</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,7 +14,7 @@
     <button id="show-questions-btn" class="secondary-btn">عرض جميع الأسئلة</button>
   </div>
 
-  <!-- شاشة عرض جميع الأسئلة (قائمة الأسئلة) -->
+  <!-- شاشة عرض جميع الأسئلة -->
   <div id="questions-screen" class="screen">
     <h2>جميع الأسئلة المتوفرة</h2>
     <ul id="all-questions-list"></ul>
